--- a/templates/products.html
+++ b/templates/products.html
@@ -1,5 +1,8 @@
 {% extends 'flatpages/default.html' %}
 
+{% load custom_filters %}
+{%  load custom_tags %}
+
 {% block title %}
 Products
 {% endblock title %}
@@ -10,7 +13,7 @@ Products
    и применяем к ней фильтр date. По назначению этот фильтр очень похож
    на метод strftime у объекта datetime в Python — вывод времени
    в указанном формате. -->
-   <h3>{{ time_now|date:'d M Y' }}</h3>
+   <h3>{% current_time '%d %b %Y' %}</h3>
     <!-- Если в переменной next_sale будет None,
    то выведется указанный в фильтре текст -->
    <h3> {{ next_sale|default_if_none:"Чуть позже сообщим о распродаже!" }} </h3>
@@ -38,7 +41,8 @@ Products
               <td>{{ product.name }}</td>
                <td>{{ product.description|truncatewords:2 }}</td>
                <td>{{ product.category.name }}</td>
-               <td>{{ product.price }}</td>
+               <!-- Используем наш фильтр -->
+               <td>{{ product.price|currency:'usd' }}</td>
                <td>{{ product.quantity }}</td>
            </tr>
            {% endfor %}
